syntax="proto3";
package pb;
option go_package = "/internal/user;user";

//window: protoc -I idl/task/pb idl/task/*.proto --go_out=plugins=grpc:.
//mac:  protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./idl/task/task.proto

message TaskModel {
    // @inject_tag: json:"favorite_id"
    int64 TaskID=1;
    // @inject_tag: json:"user_id"
    int64 UserID=2;
    // @inject_tag: json:"status"
    int64 Status=3;
    // @inject_tag: json:"title"
    string Title=4;
    // @inject_tag: json:"content"
    string Content=5;
    // @inject_tag: json:"start_time"
    int64 StartTime=6;
    // @inject_tag: json:"end_time"
    int64 EndTime=7;
}

message TaskRequest{
    int64 TaskID=1;
    int64 UserID=2;
    int64 Status=3;
    string Title=4;
    string Content=5;
    int64 StartTime=6;
    int64 EndTime=7;
}

message TasksDetailResponse{
    repeated TaskModel TaskDetail=1;
    int64 Code=2;
}

message CommonResponse{
    int64 Code=1;
    string Msg=2;
    string Data=3;
}

service TaskService{
    rpc TaskCreate(TaskRequest) returns(CommonResponse);
    rpc TaskUpdate(TaskRequest) returns(CommonResponse);
    rpc TaskShow(TaskRequest) returns(TasksDetailResponse);
    rpc TaskDelete(TaskRequest) returns(CommonResponse);
}
